--- a/index.Rmd
+++ b/index.Rmd
@@ -62,31 +62,30 @@ library(readr) # cargo el paquete
 listado <- read_csv("data/listings.csv") #importo los datos
 ```
 
-
 # ¿Qué haremos hoy?
 
 - Repaso del segundo taller 
-<br><br>
+<br>
 --
 
 - Encadenar funciones: operador %>%
-<br><br>
+<br>
 --
 
 - Crear una variable a partir de ciertas condiciones: case_when()
-<br><br>
+<br>
 --
 
 - Recodificar y renombrar variables
-<br><br>
+<br>
 --
 
 - Exportar objetos a archivos Rdata. Importar archivos Rdata.
-<br><br>
+<br>
 --
 
 - Unir dos data frame 
-<br><br>
+<br>
 --
 
 - Buenas prácticas a la hora de escribir código
@@ -172,33 +171,25 @@ listado %>% #<<
   summarise(promedio_gr = mean(price)) #<<
 ```
 
-```{r echo=FALSE}
-#encuesta %>%
-#group_by(r) %>%
-#mutate(media_edad = mean(edad)) %>%
-#filter(edad == media_edad) %>% 
-#  ungroup()
-```
-
 ---
 # Ejercicio (6')
 
 Rehacer los ejercicios anteriores usando el pipe
 
-- Selecciona los casos que tienen entre de 10 y 20 evaluaciones y guarda en un objeto llamado review_10_20.
+- Selecciona los casos que tienen entre de 10 y 20 evaluaciones y guarda en un objeto llamado `review_10_20`.
 
-- Selecciona los casos que tienen solo 3 ó 5 días de disponibilidad y guarda en un objeto llamado availability_3_5.
+- Selecciona los casos que tienen solo 3 ó 5 días de disponibilidad y guarda en un objeto llamado `availability_3_5`.
 
-- Selecciona los últimos 5 casos de listado y guarda en un objeto llamado last_5.
+- Selecciona los últimos 5 casos de listado y guarda en un objeto llamado `last_5`.
 
-- Selecciona las variables referidas a reviews y guarda en un objeto llamado reviews_name.
+- Selecciona las variables referidas a reviews y guarda en un objeto llamado `reviews_name`.
 
-- ¿Cuál es el alojamiento con mayor número de evaluaciones? Ver ?slice_max
+- ¿Cuál es el alojamiento con mayor número de evaluaciones? Ver `?slice_max`
 
 ---
 # Ejercicio (6')
 
-- Calcula la variable precio en dólares estadounidenses y llamala price_uss. Toma la cotización 1 euro - 1.13 dólares. Calcula la variable precio en pesos uruguayo y llamala price_pesos. Toma la cotización 1 euro - 49 pesos.
+- Calcula la variable precio en dólares estadounidenses y llamala `price_uss`. Toma la cotización 1 euro - 1.13 dólares. Calcula la variable precio en pesos uruguayo y llamala `price_pesos`. Toma la cotización 1 euro - 49 pesos.
 
 - ¿Cuál es el máximo y mínimo de evaluaciones que ha recibido un alojamiento?
 
@@ -234,10 +225,57 @@ listado %>% count(disponible)
 # Ejercicio (5')
 
 
-- Crear la variable `price_range` con las siguientes categorias: bajo, medio-bajo, medio, medio y alto.
+- Crear la variable `price_range` con las siguientes categorias: "bajo", "medio-bajo", "medio", "medio-alto" y "alto".
 
-- Traducir las categorías de `room_type` y en una nueva variable llamada `room_tpye_sp`
+- Traducir las categorías de `room_type` y en una nueva variable llamada `room_tpye_sp`.
 
+
+---
+class: inverse, center, middle
+# dplyr::ungroup()
+
+
+---
+# Calculo una variable a nivel de grupos
+
+- La función `r text_spec2("ungroup()")` sirve para desagrupar un data frame agrupado. 
+--
+
+- Usarla me permite que la información de los grupos no quede guardada en el objeto (si realización una asignación al resultado), lo cual conllevaría a que todos los demás cálculos se hagan sobre esos grupos.
+--
+
+- No es necesario indicarle ningún argumento. 
+
+```{r}
+listado <- listado %>%
+  group_by(room_type) %>% #<<
+  mutate(promedio = mean(price)) %>%
+  ungroup() #<<
+```
+--
+
+Podemos confirmar que la nueva variable promedio toma un valor para cada uno de las categorías de `room_type`.
+
+```{r eval = FALSE}
+listado %>% count(room_type, promedio)
+```
+
+---
+# Calculo una variable a nivel de grupos
+
+- Además, la función  `r text_spec2("ungroup()")`  me permite encadenar dos agrupaciones diferentes y realizar un cálculo para cada una, como en el ejemplo que sigue. 
+
+```{r}
+listado <- listado %>%
+  group_by(room_type) %>% #<<
+  mutate(promedio = mean(price)) %>%
+  ungroup() %>% #<<
+  group_by(neighbourhood_group) %>% #<<
+  mutate(maximo = mean(price)) %>%
+  ungroup() #<<
+```
+
+Debo recordar de desagrupar si no quiero que el objeto listado guarde la información de la agrupación.
 
 ---
 class: inverse, center, middle
@@ -249,7 +287,7 @@ class: inverse, center, middle
 - La función `r text_spec2("recode()")` permite recodificar una variable. 
 --
 
-- recode(<df>, `r text_spec2("<variable>")`, `r text_spec2("<categoria_actual>")` = `r text_spec2("<categoria_nueva>")`)
+- recode(`r text_spec2("<df>")`, `r text_spec2("<variable>")`, `r text_spec2("<categoria_actual>")` = `r text_spec2("<categoria_nueva>")`)
 --
  
  - Recodifico la variable `room_type`, pasando sus categorías a español.
@@ -294,14 +332,6 @@ listado <- listado %>%
          lon = longitude) #<< 
 ```
 
-<!-- --- -->
-<!-- # Mayúsculas y minúsculas -->
-
-<!-- The select_all() function allows changes to all columns, and takes a function as an argument. -->
-
-<!-- To get all column names in uppercase, you can use toupper(), similarly you could use tolower(). -->
-
-
 ---
 class: inverse, center, middle
 # %<>%
@@ -309,7 +339,7 @@ class: inverse, center, middle
 ---
 # Pipe de asignación
 
-Para no repetirar todas las veces
+Para no repetir el nombre del data frame todas las veces
 
 ```{r eval = FALSE}
 listado <- listado %>% ...
@@ -377,7 +407,7 @@ class: inverse, middle, center
 ---
 # join (merge) data frames
 
-- Las funciones *_join() de dplyr permiten `r text_spec2("unir dos data frame")`. Para ejemplificar llamaremos al primero `x`, al segundo `y`.
+- Las funciones `r text_spec2("*_join()")` de `dplyr` permiten `r text_spec2("unir dos data frame")`. Para ejemplificar llamaremos al primero `x`, al segundo `y`.
 <br><br>
 --
 
@@ -395,17 +425,14 @@ class: inverse, middle, center
 
 - Una simplificación de cómo operan cada una de estas funciones las veremos mediante gif creados en este tutorial de tidyexplain](https://www.garrickadenbuie.com/project/tidyexplain/).
 
-<!-- https://stat545.com/join-cheatsheet.html -->
-<!-- https://dplyr.tidyverse.org/reference/join.html#join-types -->
-<!-- https://statistical-programming.com/r-dplyr-join-inner-left-right-full-semi-anti -->
 ---
 # dplyr::left_join
 
 .pull-left[
 
-- Mantiene todos los casos x
+- `r text_spec2("Mantiene todos los casos y variables de x.")` 
 
-- Agrega las variables de y, para los casos de x que no están en y, esas nuevas variables tendrán un dato faltante.
+- `r text_spec2("Agrega las variables de y")`, para los casos de x que no están en y, esas nuevas variables tendrán un dato faltante.
 
 - Si una fila de x matchea con múltiples filas de y, la fila de x se repetirá tantas veces como filas de y. 
 
@@ -421,10 +448,10 @@ class: inverse, middle, center
 # dplyr::right_join
 
 .pull-left[
-- Se queda con todas las variables de y.
 
-- Se queda con las variables de ambos data frame.
+- Se queda con todos los casos y las variables de `y`.
 
+- El `right_join(x, y)` es lo mismo que el `left_join(y, x)`
 ]
 .pull-right[
 
@@ -434,11 +461,9 @@ class: inverse, middle, center
 # full_join
 
 .pull-left[
-- Se queda con todos los casos de `x` y todos los casos de `y`.
+- Se queda con todos los casos de `x` y todos los casos `y`.
 
-
-- Se queda con todas las variables de `x` y todas las de `y`.
-
+- Se queda con todos las variables de `x` y todas las de `y`.
 ]
 
 .pull-right[
@@ -449,7 +474,7 @@ class: inverse, middle, center
 # inner_join()
 
 .pull-left[
-- Se queda solo con los casos comunes entre x e y.
+- Se queda solo con los casos comunes entre `x` e `y`.
 
 
 - Se queda con las variables de ambas bases.
@@ -475,14 +500,14 @@ class: inverse, middle, center
 # dplyr::anti_join
 
 
-- Se queda con los casos de x que no están en y.
+- Se queda con los casos de `x` que no están en `y`.
 
 ![](img/anti-join.gif)
 
 ---
 # Ejemplo *_join()
 
-- Cargo los archivos listings.csv y reviews.Rdata.
+- Cargo los archivos "listings.csv" y "reviews.Rdata".
 --
 
 ```{r}
@@ -491,7 +516,7 @@ listado <- read_csv("data/listings.csv")
 load("data/reviews.Rdata") # es un Rdata no debo asignarle nombre de objeto, ya lo tiene.
 ```
 
-- Exploro para encontrar cual es la variable identificatoria en cada data frame.
+- Exploro para encontrar cuál es la variable identificatoria en cada data frame.
 --
 
 .pull-left[
@@ -508,21 +533,23 @@ reviews %>% select(1:2) %>% slice(1:3)
 ---
 # Ejemplo *_join()
 
-- La variable id de listado identifica al alojamiento y la variable listing_id es la que identifica el alojamiento en el objeto reviews. La variable id de reviews identifica a la evaluación.
+- La variable "id" de `listado` identifica al alojamiento y la variable "listing_id" es la que identifica el alojamiento en el objeto `reviews`. La variable "id" de `reviews` identifica a la evaluación.
 --
-```{r}
+
+```{r eval = FALSE}
 listado %>% count(duplicated(id))
 reviews %>% count(duplicated(id))
 reviews %>% count(duplicated(listing_id))
 ```
+
 --
-- ¿Si quiero quedarme con todos los casos de x y agregarle las variables que están en y, qué join debo hacer?
+- ¿Si quiero quedarme con todos los casos de `listado` (x) y agregarle las variables que están en `reviews` (y), qué join debo hacer?
 - ¿Qué dimensiones espero que tenga el nuevo data frame?
 
 ---
 # Ejemplo *_join()
 
-- ¿Todos los casos de listado están en reviews y viceversa?
+- ¿Todos los casos de `listado` están en `reviews` y viceversa?
 
 ```{r}
 reviews %>% count(listing_id %in% listado$id)
@@ -539,22 +566,21 @@ listado_reviews <- left_join(listado, reviews, by = c("id" = "listing_id"))
 listado_reviews %>% tally()
 ```
 --
-Chequeo casos duplicados en listado_reviews en la variable id.
+Chequeo casos duplicados en `listado_reviews` en la variable "id".
 
 ```{r}
 listado_reviews %>% count(duplicated(id))
 ```
-
 ---
 # Ejercicio (8')
 
-- Cargar el archivo listado_complete.Rdata
+- Cargar el archivo "listado_complete.Rdata"
 
-- Averiguar por cuál(es) variable(s) se puede unir con el objeto listado.
+- Averiguar por cuál(es) variable(s) se puede unir con el objeto `listado`.
 
-- Hacer un join entre listado y listado_complete agregando solamente del segundo data frame las variables: id, city, square_feet, review_scores_rating. 
+- Hacer un join entre `listado` y `listado_complete` agregando solamente del segundo data frame las variables: id, city, square_feet, review_scores_rating. 
 
-- Guardar el nuevo objeto listado en el Rdata original. 
+- Guardar el nuevo objeto `listado` en el Rdata original. 
 
 ---
 # Sintaxis
@@ -617,90 +643,3 @@ x<-10
 - Prestá atención a los **mensajes** de error y advertencia.
 
 
-
-
-
-<!--     _if: permite elegir variables que satisfagan algunos criterios lógicos como is.numeric() o is.character() (por ejemplo, resumiendo sólo las columnas numéricas) -->
-
-<!--   _at:  permite realizar una operación sólo en variables especificadas por nombre (por ejemplo, mutando sólo las columnas cuyo nombre termina en "_fecha") -->
-
-<!--  _all:   permite realizar una operación en todas las variables a la vez (por ejemplo, calcular el número de valores que faltan en cada columna) -->
-
-
-<!-- The instructions for summarizing have to be a function. When there is no function available in base R or a package to do what you want, you can either make a function upfront, or make a function on the fly. -->
-
-<!-- The sample code will add 5 to the mean of each column. The function on the fly can be made by either using funs(mean(., na.rm = TRUE) + 5), or via a tilde: ~mean(., na.rm = TRUE) + 5. -->
-
-
-<!-- The function summarise_if() requires two arguments: -->
-
-<!--     First it needs information about the columns you want it to consider. This information needs to be a function that returns a boolean value. The easiest cases are functions like is.numeric, is.integer, is.double, is.logical, is.factor, lubridate::is.POSIXt or lubridate::is.Date. -->
-
-<!--     Secondly, it needs information about how to summarise that data, which needs to be a function. If not a function, you can create a function on the fly using funs() or a tilde (see above). -->
-
-<!-- av_survey_sample %>% select_if(is.numeric) -->
-
-<!-- av_survey_sample %>%  -->
-<!--   # select columns with at least one NA -->
-<!--   # the expression evaluates to TRUE if there is one or more missing values -->
-<!--   select_if(~sum(is.na(.x)) > 0)  -->
-  
-<!-- --- -->
-
-
-<!-- We could rename columns that satisfy a logical expression using rename_if(). For instance, we can add a num_ prefix to all numeric column names. -->
-
-<!-- av_survey_sample %>% -->
-<!--   # only rename numeric columns by adding a "num_" prefix -->
-<!--   rename_if(is.numeric, ~paste0("num_", .x)) -->
-
-<!-- av_survey_sample %>%  -->
-<!--   # only mutate columns with at least one NA -->
-<!--   # replace each NA value with the character "missing" -->
-<!--   mutate_if(~sum(is.na(.x)) > 0, -->
-<!--             ~if_else(is.na(.x), "missing", as.character(.x))) -->
-
-<!-- variables specified by name -->
-
-<!-- _at allows you to perform an operation only on variables specified by name. -->
-
-<!-- To specify which variables you want to operate on, you need to include the variable names inside the vars() function as the first argument. I think of as like vars() like c() to provide multiple values (in this case variable names) as a single argument. For example av_survey_sample %>% mutate_at(vars(start_date, end_date), mdy_hms) will only mutate the start_date and end_date variables by converting them to lubridate format using the mdy_hms function. -->
-
-<!-- These variables can be specified explicitly by name within the vars() function, or using the select_helpers within the vars() function. -->
-<!-- Select helpers -->
-
-<!-- Select helpers are functions that you can use within select() to help specify which variables you want to select. The options are -->
-
-<!--     starts_with(): select all variables that start with a specified character string -->
-
-<!--     ends_with(): select all variables that end with a specified character string -->
-
-<!--     contains(): select all variables that contain a specified character string -->
-
-<!--     matches(): select variables that match a specified character string -->
-
-<!--     one_of(): selects variables that match any entries in the specified character vector -->
-
-<!--     num_range(): selects variables that are numbered (e.g. columns named V1, V2, V3 would be selected by select(num_range("V", 1:3))) -->
-
-<!-- # provide one_of with a vector of character variables -->
-<!-- variables <- c("start_date", "end_date") -->
-<!-- av_survey_sample %>% select(one_of(variables)) -->
-
-<!-- av_survey_sample %>%  -->
-<!--   mutate(start_date = mdy_hms(start_date), -->
-<!--          end_date = mdy_hms(end_date)) -->
-
-<!-- # specifying specific variables to apply the same function to -->
-<!-- av_survey_sample %>%  -->
-<!--   mutate_at(vars(start_date, end_date), mdy_hms) -->
-  
-<!-- # ungroup -->
-
-
-<!-- --- -->
-<!-- # tally  -->
-
-<!-- f you’re only interested in counting the total number of cases for a dataframe, you could use tally(), which behaves simarly to nrow(). -->
-
-<!-- You can’t provide a variable to count with tally(), it only works to count the overall number of observations. In fact, as is described in the dplyr documentation, count() is a short-hand for group_by() and tally() -->
